[package]
name = "t"
version = "0.1.0"
authors = ["zTgx <747674262@qq.com>"]
edition = "2018"
repository = "https://github.com/zTgx/t.git"
readme = "README.md"
keywords = [ "git", "template", "cargo new" ]
categories = [ "development-tools" ]
license = "MIT/Apache-2.0"
exclude = [ "/.travis.yml" ]
description = "Generate Cargo project template in Rust"

[dependencies]
getopts = "0.2"
term = "0.4.6"
